set max threadpool to 48.

--- a/augmentation_threads/CMakeLists.txt
+++ b/augmentation_threads/CMakeLists.txt
@@ -6,10 +6,12 @@ set(VERSION 0.1.0)
 
 add_compile_options("-std=c++11")
 
-include_directories(/usr/include/opencv /usr/include/opencv2)
+#include_directories(/usr/include/opencv /usr/include/opencv2)
 #link_directories(/usr/local/lib /Users/starimpact/work/augmentation_threads/build)
-link_directories(/usr/lib/x86_64-linux-gnu)
-set(LIBS opencv_imgproc opencv_video opencv_highgui opencv_core opencv_photo)
+#link_directories(/usr/lib/x86_64-linux-gnu)
+include_directories(/usr/local/include/opencv /usr/local/include/opencv2)
+link_directories(/usr/local/lib)
+set(LIBS opencv_imgproc opencv_video opencv_highgui opencv_core opencv_imgcodecs opencv_photo)
 
 #file(GLOB_RECURSE SRCS *.cc)
 set(EXE_SRC main.cc)
